--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <!-- 푸터 -->
     <footer class="bg-gray-800 text-white py-6">
         <div class="container mx-auto text-center">
-            <p>© 2025 LSH Partners. 모든 권리 보유.</p>
+            <p>© 2025 에이플레이어파트너스(주).</p>
         </div>
     </footer>
 </div>
