--- a/index.html
+++ b/index.html
@@ -54,16 +54,21 @@
             display: block; /* 다운로드 중 프로그래스바 표시 */
         }
         /* 버전과 버튼 레이아웃 */
-        .apk-item {
+        .file-item {
             display: flex;
             align-items: center;
             gap: 16px;
             margin-bottom: 8px;
         }
-        .apk-version {
+        .file-version {
             font-size: 1.125rem; /* text-lg */
             font-weight: 600; /* font-semibold */
             color: #1f2937; /* text-gray-800 */
+        }
+        .file-type {
+            font-size: 0.875rem; /* text-sm */
+            color: #6b7280; /* text-gray-500 */
+            margin-left: 8px;
         }
     </style>
 </head>
@@ -92,9 +97,9 @@
     <!-- Android 콘텐츠 -->
     <section class="container mx-auto px-4 py-12">
         <div class="w-full">
-            <h3 class="text-2xl font-semibold text-gray-800">다운로드 가능한 APK 목록</h3>
-            <div id="apk-list" class="mt-4">
-                <p class="text-gray-600">APK 파일을 불러오는 중...</p>
+            <h3 class="text-2xl font-semibold text-gray-800">다운로드 가능한 APK/AAB 목록</h3>
+            <div id="file-list" class="mt-4">
+                <p class="text-gray-600">APK/AAB 파일을 불러오는 중...</p>
             </div>
         </div>
     </section>
@@ -117,7 +122,7 @@
     const errorMessage = document.getElementById('error-message');
     const nameInputSection = document.getElementById('name-input-section');
     const downloadPage = document.getElementById('download-page');
-    const apkList = document.getElementById('apk-list');
+    const fileList = document.getElementById('file-list');
 
     // 이름 입력 처리
     submitButton.addEventListener('click', () => {
@@ -125,7 +130,7 @@
         if (allowedNames.includes(enteredName)) {
             nameInputSection.classList.add('hidden');
             downloadPage.classList.remove('hidden');
-            fetchApkList();
+            fetchFileList();
         } else {
             errorMessage.classList.remove('hidden');
         }
@@ -135,14 +140,15 @@
         errorMessage.classList.add('hidden');
     });
 
-    // APK 목록 가져오기
-    async function fetchApkList() {
+    // APK/AAB 목록 가져오기
+    async function fetchFileList() {
         try {
-            let response = await fetch('/api/fetch-apks');
+            // android/builds 디렉토리에서 파일 가져오기
+            let response = await fetch('/api/fetch-files?path=android/builds');
             
             if (!response.ok) {
                 console.warn('Netlify Functions 요청 실패, 비인증 GitHub API 시도:', response.status, response.statusText);
-                response = await fetch('https://api.github.com/repos/mangchi-co/mangchibox/contents/android/apk', {
+                response = await fetch('https://api.github.com/repos/mangchi-co/mangchibox/contents/android/builds', {
                     headers: {
                         'Accept': 'application/vnd.github.v3+json'
                     }
@@ -151,22 +157,23 @@
 
             if (!response.ok) {
                 const errorData = await response.json().catch(() => ({}));
-                throw new Error(`APK 목록 가져오기 실패: ${response.status} ${response.statusText} - ${errorData.message || '알 수 없는 오류'}`);
+                throw new Error(`파일 목록 가져오기 실패: ${response.status} ${response.statusText} - ${errorData.message || '알 수 없는 오류'}`);
             }
 
             const files = await response.json();
-            console.log('APK 목록 응답:', files);
+            console.log('파일 목록 응답:', files);
 
-            // APK 파일 필터링 및 파싱
-            const apkFiles = files
-                .filter(file => file.name.endsWith('.apk') && file.name.startsWith('mangchi-'))
+            // APK와 AAB 파일 필터링 및 파싱
+            const buildFiles = files
+                .filter(file => (file.name.endsWith('.apk') || file.name.endsWith('.aab')) && file.name.startsWith('mangchi-'))
                 .map(file => {
-                    const match = file.name.match(/^mangchi-(\d+\.\d+\.\d+\.\d+)-(\d{14})\.apk$/);
+                    const ext = file.name.endsWith('.apk') ? 'apk' : 'aab';
+                    const match = file.name.match(/^mangchi-(\d+\.\d+\.\d+\.\d+)-(\d{14})\.(apk|aab)$/);
                     if (match) {
                         const versionName = match[1];
                         const buildTime = match[2];
                         const [major, minor, patch, build] = versionName.split('.').map(Number);
-                        const versionCode = major * 10000 + minor * 1000 + patch * 100 + build; // 예: 1.0.2.4 -> 10204
+                        const versionCode = major * 10000 + minor * 1000 + patch * 100 + build;
                         const displayVersion = `${major}.${minor}.${patch}`;
                         const formattedBuildTime = `${buildTime.slice(0, 4)}-${buildTime.slice(4, 6)}-${buildTime.slice(6, 8)} ${buildTime.slice(8, 10)}:${buildTime.slice(10, 12)}:${buildTime.slice(12, 14)}`;
                         return {
@@ -177,7 +184,8 @@
                             build,
                             buildTime: formattedBuildTime,
                             rawBuildTime: buildTime,
-                            downloadUrl: file.download_url
+                            downloadUrl: file.download_url,
+                            ext
                         };
                     }
                     return null;
@@ -186,7 +194,7 @@
 
             // displayVersion(MAJOR.MINOR.PATCH)별로 그룹화
             const groupedByVersion = {};
-            apkFiles.forEach(file => {
+            buildFiles.forEach(file => {
                 if (!groupedByVersion[file.displayVersion]) {
                     groupedByVersion[file.displayVersion] = [];
                 }
@@ -210,21 +218,21 @@
                 return 0;
             });
 
-            // APK 목록 렌더링
+            // 파일 목록 렌더링
             if (sortedVersions.length === 0) {
-                apkList.innerHTML = '<p class="text-gray-600">사용 가능한 APK 파일이 없습니다.</p>';
+                fileList.innerHTML = '<p class="text-gray-600">사용 가능한 APK/AAB 파일이 없습니다.</p>';
                 return;
             }
 
-            apkList.innerHTML = sortedVersions.map(version => {
+            fileList.innerHTML = sortedVersions.map(version => {
                 const builds = groupedByVersion[version];
                 const latestBuild = builds[0];
                 const olderBuilds = builds.slice(1);
 
                 let html = `
                     <div class="mt-4 p-4 bg-white rounded-lg shadow">
-                        <div class="apk-item">
-                            <p class="apk-version">버전: ${version} (${latestBuild.versionCode})</p>
+                        <div class="file-item">
+                            <p class="file-version">버전: ${version} (${latestBuild.versionCode}) <span class="file-type">(${latestBuild.ext})</span></p>
                             <button class="download-button bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700 transition" 
                                     data-url="${latestBuild.downloadUrl}" 
                                     data-filename="${latestBuild.name}">
@@ -244,8 +252,8 @@
                             <div class="ml-4 mt-2">
                                 ${olderBuilds.map(build => `
                                     <div class="mt-2 p-2 bg-gray-50 rounded-lg">
-                                        <div class="apk-item">
-                                            <p class="apk-version">버전: ${build.displayVersion} (${build.versionCode})</p>
+                                        <div class="file-item">
+                                            <p class="file-version">버전: ${build.displayVersion} (${build.versionCode}) <span class="file-type">(${build.ext})</span></p>
                                             <button class="download-button bg-gray-500 text-white px-3 py-1 rounded-lg hover:bg-gray-600 transition" 
                                                     data-url="${build.downloadUrl}" 
                                                     data-filename="${build.name}">
@@ -342,8 +350,8 @@
                 window.URL.revokeObjectURL(url);
             }
         } catch (error) {
-            console.error('APK 목록 가져오기 실패:', error);
-            apkList.innerHTML = `<p class="text-red-600">APK 목록을 불러오지 못했습니다: ${error.message}. 나중에 다시 시도하세요.</p>`;
+            console.error('파일 목록 가져오기 실패:', error);
+            fileList.innerHTML = `<p class="text-red-600">APK/AAB 목록을 불러오지 못했습니다: ${error.message}. 나중에 다시 시도하세요.</p>`;
         }
     }
 </script>
