--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
     <!-- Android 콘텐츠 -->
     <section class="container mx-auto px-4 py-12">
         <div class="w-full">
-            <h3 class="text-2xl font-semibold text-gray-800">다운로드 가능한 APK/AAB 목록</h3>
+            <h3 class="text-2xl font-semibold text-gray-800">다운로드 가능한 APP 목록</h3>
             <div id="file-list" class="mt-4">
-                <p class="text-gray-600">APK/AAB 파일을 불러오는 중...</p>
+                <p class="text-gray-600">APP을 불러오는 중...</p>
             </div>
         </div>
     </section>
@@ -220,7 +220,7 @@
 
             // 파일 목록 렌더링
             if (sortedVersions.length === 0) {
-                fileList.innerHTML = '<p class="text-gray-600">사용 가능한 APK/AAB 파일이 없습니다.</p>';
+                fileList.innerHTML = '<p class="text-gray-600">사용 가능한 APP이 없습니다.</p>';
                 return;
             }
 
@@ -351,7 +351,7 @@
             }
         } catch (error) {
             console.error('파일 목록 가져오기 실패:', error);
-            fileList.innerHTML = `<p class="text-red-600">APK/AAB 목록을 불러오지 못했습니다: ${error.message}. 나중에 다시 시도하세요.</p>`;
+            fileList.innerHTML = `<p class="text-red-600">APP 목록을 불러오지 못했습니다: ${error.message}. 나중에 다시 시도하세요.</p>`;
         }
     }
 </script>
