--- a/index.html
+++ b/index.html
@@ -70,6 +70,14 @@
             color: #6b7280; /* text-gray-500 */
             margin-left: 8px;
         }
+        /* 수정 시작 */
+        /* 버튼을 가로로 배치하기 위한 스타일 */
+        .button-container {
+            display: flex;
+            gap: 12px;
+            align-items: center;
+        }
+        /* 수정 완료 */
     </style>
 </head>
 <body class="bg-gray-100 font-sans">
@@ -192,42 +200,34 @@
                 })
                 .filter(file => file !== null);
 
-            // displayVersion별로 그룹화하고, 각 버전 내에서 apk와 aab로 세분화
-            const groupedByVersion = {};
+            // versionCode별로 그룹화하고, 각 버전 내에서 apk와 aab로 세분화
+            const groupedByVersionCode = {};
             buildFiles.forEach(file => {
-                if (!groupedByVersion[file.displayVersion]) {
-                    groupedByVersion[file.displayVersion] = { apk: [], aab: [] };
+                if (!groupedByVersionCode[file.versionCode]) {
+                    groupedByVersionCode[file.versionCode] = { apk: [], aab: [], displayVersion: file.displayVersion };
                 }
-                groupedByVersion[file.displayVersion][file.ext].push(file);
+                groupedByVersionCode[file.versionCode][file.ext].push(file);
             });
 
-            // 각 버전의 apk와 aab별로 빌드 시간 기준 내림차순 정렬
-            Object.keys(groupedByVersion).forEach(version => {
+            // 각 versionCode의 apk와 aab별로 빌드 시간 기준 내림차순 정렬
+            Object.keys(groupedByVersionCode).forEach(versionCode => {
                 ['apk', 'aab'].forEach(ext => {
-                    groupedByVersion[version][ext].sort((a, b) => b.rawBuildTime.localeCompare(a.rawBuildTime));
+                    groupedByVersionCode[versionCode][ext].sort((a, b) => b.rawBuildTime.localeCompare(a.rawBuildTime));
                 });
             });
 
-            // 버전 목록을 내림차순 정렬
-            const sortedVersions = Object.keys(groupedByVersion).sort((a, b) => {
-                const versionA = a.split('.').map(Number);
-                const versionB = b.split('.').map(Number);
-                for (let i = 0; i < 3; i++) {
-                    const numA = versionA[i] || 0;
-                    const numB = versionB[i] || 0;
-                    if (numB !== numA) return numB - numA;
-                }
-                return 0;
-            });
+            // 버전 코드 목록을 내림차순 정렬
+            const sortedVersionCodes = Object.keys(groupedByVersionCode).sort((a, b) => b - a);
 
             // 파일 목록 렌더링
-            if (sortedVersions.length === 0) {
+            if (sortedVersionCodes.length === 0) {
                 fileList.innerHTML = '<p class="text-gray-600">사용 가능한 APP이 없습니다.</p>';
                 return;
             }
 
-            fileList.innerHTML = sortedVersions.map(version => {
-                const versionData = groupedByVersion[version];
+            // 수정 시작
+            fileList.innerHTML = sortedVersionCodes.map(versionCode => {
+                const versionData = groupedByVersionCode[versionCode];
                 const latestApk = versionData.apk[0];
                 const latestAab = versionData.aab[0];
                 const olderApkBuilds = versionData.apk.slice(1);
@@ -237,41 +237,35 @@
                 // 최신 빌드 버튼 생성 (apk와 aab 모두 표시)
                 let html = `
                     <div class="mt-4 p-4 bg-white rounded-lg shadow">
-                        <p class="file-version">버전: ${version}</p>
-                        <div class="ml-4">
+                        <p class="file-version">버전: ${versionData.displayVersion} (${versionCode})</p>
+                        <div class="button-container ml-4 mt-2">
                 `;
 
                 if (latestApk) {
                     html += `
-                        <div class="file-item">
-                            <p class="file-version">${latestApk.versionCode} <span class="file-type">(apk)</span></p>
-                            <button class="download-button bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700 transition" 
-                                    data-url="${latestApk.downloadUrl}" 
-                                    data-filename="${latestApk.name}">
-                                <span class="text">다운로드</span>
-                                <svg class="progress-circle" viewBox="0 0 24 24">
-                                    <circle class="progress-circle-bg" cx="12" cy="12" r="10"></circle>
-                                    <circle class="progress-circle-fg" cx="12" cy="12" r="10" stroke-dasharray="0 62.83"></circle>
-                                </svg>
-                            </button>
-                        </div>
+                        <button class="download-button bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700 transition" 
+                                data-url="${latestApk.downloadUrl}" 
+                                data-filename="${latestApk.name}">
+                            <span class="text">APK 다운로드</span>
+                            <svg class="progress-circle" viewBox="0 0 24 24">
+                                <circle class="progress-circle-bg" cx="12" cy="12" r="10"></circle>
+                                <circle class="progress-circle-fg" cx="12" cy="12" r="10" stroke-dasharray="0 62.83"></circle>
+                            </svg>
+                        </button>
                     `;
                 }
 
                 if (latestAab) {
                     html += `
-                        <div class="file-item">
-                            <p class="file-version">${latestAab.versionCode} <span class="file-type">(aab)</span></p>
-                            <button class="download-button bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700 transition" 
-                                    data-url="${latestAab.downloadUrl}" 
-                                    data-filename="${latestAab.name}">
-                                <span class="text">다운로드</span>
-                                <svg class="progress-circle" viewBox="0 0 24 24">
-                                    <circle class="progress-circle-bg" cx="12" cy="12" r="10"></circle>
-                                    <circle class="progress-circle-fg" cx="12" cy="12" r="10" stroke-dasharray="0 62.83"></circle>
-                                </svg>
-                            </button>
-                        </div>
+                        <button class="download-button bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700 transition" 
+                                data-url="${latestAab.downloadUrl}" 
+                                data-filename="${latestAab.name}">
+                            <span class="text">AAB 다운로드</span>
+                            <svg class="progress-circle" viewBox="0 0 24 24">
+                                <circle class="progress-circle-bg" cx="12" cy="12" r="10"></circle>
+                                <circle class="progress-circle-fg" cx="12" cy="12" r="10" stroke-dasharray="0 62.83"></circle>
+                            </svg>
+                        </button>
                     `;
                 }
 
@@ -285,11 +279,11 @@
                                 ${olderBuilds.map(build => `
                                     <div class="mt-2 p-2 bg-gray-50 rounded-lg">
                                         <div class="file-item">
-                                            <p class="file-version">${build.versionCode} <span class="file-type">(${build.ext})</span></p>
+                                            <p class="file-version">${build.buildTime}</p>
                                             <button class="download-button bg-gray-500 text-white px-3 py-1 rounded-lg hover:bg-gray-600 transition" 
                                                     data-url="${build.downloadUrl}" 
                                                     data-filename="${build.name}">
-                                                <span class="text">다운로드</span>
+                                                <span class="text">${build.ext.toUpperCase()} 다운로드</span>
                                                 <svg class="progress-circle" viewBox="0 0 24 24">
                                                     <circle class="progress-circle-bg" cx="12" cy="12" r="10"></circle>
                                                     <circle class="progress-circle-fg" cx="12" cy="12" r="10" stroke-dasharray="0 62.83"></circle>
@@ -306,6 +300,7 @@
                 html += '</div>';
                 return html;
             }).join('');
+            // 수정 완료
 
             // 다운로드 버튼에 이벤트 리스너 추가
             document.querySelectorAll('.download-button').forEach(button => {
@@ -353,7 +348,7 @@
                             progressFg.setAttribute('stroke-dasharray', `${dashLength} ${circumference}`);
                         }
 
-                        // 다운로드 완료 후 Blob 생성 및 트리거
+                        // 다운로드 완료 후 Blob 생성 및 호출
                         const blob = new Blob(chunks);
                         triggerDownload(blob, filename);
 
@@ -363,14 +358,14 @@
                         await new Promise(resolve => setTimeout(resolve, 300));
                         button.classList.remove('disabled', 'downloading');
                     } catch (error) {
-                        console.error('다운로드 오류:', error);
+                        console.error('Upload 오류:', error);
                         button.classList.remove('disabled', 'downloading');
                         alert('다운로드 중 오류가 발생했습니다: ' + error.message);
                     }
                 });
             });
 
-            // Blob으로 다운로드 트리거
+            // Blob으로 다운로드 호출
             function triggerDownload(blob, filename) {
                 const url = window.URL.createObjectURL(blob);
                 const a = document.createElement('a');
@@ -383,10 +378,10 @@
             }
         } catch (error) {
             console.error('파일 목록 가져오기 실패:', error);
-            fileList.innerHTML = `<p class="text-red-600">APP 목록을 불러오지 못했습니다: ${error.message}. 나중에 다시 시도하세요.</p>`;
+            fileList.innerHTML = `<p class="text-red-600">APP 목록을 불러올 수 없습니다: ${error.message}. 나중에 다시 시도하세요.</p>`;
         }
     }
 </script>
-<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'95387309c9e7ea2d',t:'MTc1MDU2MDc0NC4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script>
+<script>(function(){var b=a.contentDocument||a.contentWindow.document;if(b){var c=b.createElement('script');c.innerHTML="window.__CF$cv$params={r:'95387309c9e7ea2d',t:'MTc1MDU2MDc0NC4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(c)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)b();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',b);else{var d=document.onreadystatechange||function(){};document.onreadystatechange=function(a){d(a);'loading'!==document.readyState&&(document.onreadystatechange=d,b())}}}})();</script>
 </body>
 </html>
